// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputGroupAddon /> create input group add-on items 1`] = `
<span
  className="fd-input-group__addon"
>
  $
</span>
`;

exports[`<InputGroupAddon /> create input group add-on items 2`] = `
<span
  className="fd-input-group__addon fd-input-group__addon--button"
>
  <button
    className="fd-button fd-input-group__button"
    type="button"
  >
    Text Here
  </button>
</span>
`;

exports[`<InputGroupAddon /> create input group add-on items 3`] = `
<span
  className="fd-input-group__addon fd-input-group__addon--button"
>
  <button
    className="fd-button fd-button--compact fd-input-group__button"
    type="button"
  >
    Text Here
  </button>
</span>
`;
